<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Balloons North"</string>
    <string name="hello_world">Hello world!</string>
    <string name="weekSpecials">מבצעי השבוע</string>
    <string name="about">מי אנחנו</string>
    <string name="packages">חבילות</string>
    <string name="ourProducts">המוצרים שלנו</string>
    <string name="friendsRecommend">חברים ממליצים</string>
    <string name="portfolio">עבודות שלנו</string>
    <string name="callUs">לחץ להתקשר</string>
    <string name="phoneNumber">0549876451</string>
    <string name="facebook">Facebook</string>
    <string name="open_picture">Open Picture</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>