<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewLinearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/custom_main_background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/viewSplashImage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@drawable/splash_picture"
        android:src="@drawable/splash_picture" />

    <ScrollView
        android:id="@+id/viewScrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/viewRelativeLayoutMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnAbout"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/menu_buton_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/about"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnWeekSpecials"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/menu_buton_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="55"
                android:text="@string/weekSpecials"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnPackages"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/btnAbout"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/menu_buton_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/packages"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnOurProducts"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnAbout"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/menu_buton_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/ourProducts"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnFriendsRecommend"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/btnPackages"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/menu_buton_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/friendsRecommend"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnPortfolio"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnOurProducts"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/menu_buton_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/portfolio"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btnCallUs"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/btnPortfolio"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/menu_buton_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/callUs"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btnImgFacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/btnCallUs"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/btnCallUs"
                android:layout_below="@+id/btnPortfolio"
                android:layout_marginLeft="5dp"
                android:background="@drawable/menu_buton_shape"
                android:contentDescription="@string/facebook"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/facebook_logo" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>